@@ -22,16 +22,27 @@ None.
 =cut
 
 use Krang::ClassLoader base => 'CGI';
-use Krang::ClassLoader Conf => qw(KrangRoot DefaultLanguage);
+use Krang::ClassLoader Conf => qw(
+    KrangRoot
+    DefaultLanguage
+    InstanceHostName
+    BadHelpNotify
+    FromAddress
+    SMTPServer
+);
 use File::Spec::Functions qw(catfile catdir);
 use Krang::ClassLoader 'HTMLTemplate';
 use Krang::ClassLoader 'File';
 use Krang::ClassLoader Session => qw(%session);
+use Krang::ClassLoader 'Log'   => qw(debug info);
 
 sub setup {
     my $self = shift;
     $self->start_mode('show');
-    $self->run_modes(show => 'show');
+    $self->run_modes(
+        show            => 'show',
+        bad_help_notify => 'bad_help_notify'
+    );
 }
 
 sub show {
@@ -60,6 +71,42 @@ sub show {
     );
 
     return $template->output;
+}
+
+# if the help topic is not defined send a message to the site admin
+sub bad_help_notify {
+    my $self = shift;
+    my $query = $self->query;
+    my $topic = scalar $query->param('topic') or die "Missing required topic.";
+
+    # send an email to the BadHelpNotify email address if it exists
+    if (BadHelpNotify) {
+        my $email_to = $ENV{KRANG_TEST_EMAIL} || BadHelpNotify;
+        my $user     = $ENV{REMOTE_USER};
+        my $hostname = InstanceHostName;
+        my $msg      = "User '$user' on $hostname has encountered an undefined Help topic '$topic'.";
+
+        debug(__PACKAGE__ . "->bad_help_notify() - sending email to $email_to : $msg");
+        my $sender = Mail::Sender->new(
+            {
+                smtp      => SMTPServer,
+                from      => FromAddress,
+                on_errors => 'die'
+            }
+        );
+
+        $sender->MailMsg(
+            {
+                to      => $email_to,
+                subject => "[Krang] Repeated failed login attempts",
+                msg     => $msg,
+            }
+        );
+    }
+
+    # add_alert('bad_help_notify', topic => $topic, minutes => BadLoginWait);
+    # return $self->show_form();
+    return;
 }
 
 1;
